--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -238,7 +238,7 @@ img {
   color: #000;
   font-size: 19px;
   font-weight: 200;
-  text-align: left;
+  text-align: center;
 }
 
 .bio-with-picture-included {
