--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -1208,9 +1208,9 @@ img {
     margin-bottom: 36px;
   }
   .main-footer {
-    margin-top: 61px;
-    background-color: #ca94bf;
-    box-shadow: 0 0 50px 18px #ca94bf;
+    margin-top: 0px;
+    background-color: #b9a7d3;
+    box-shadow: 0 0 50px 18px #b9a7d3;
   }
   .cuts-and-styling-heading {
     margin-top: 74px;
