--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -1189,8 +1189,8 @@ img {
     text-align: left;
   }
   .bio-paragraph {
-    margin-right: 13px;
-    margin-left: 13px;
+    margin-right: 0px;   /*------------------------COME BACK HERE WHEN YOU NEED TO-----*/
+    margin-left: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
     padding-left: 0px;
