--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -1154,7 +1154,7 @@ img {
     display: flex;
   }
   .bio-section {
-    margin-bottom: 25px;
+    margin-bottom: 0px;
   }
   .heading-with-logo {
     margin-top: -14px;
@@ -1189,13 +1189,16 @@ img {
     text-align: left;
   }
   .bio-paragraph {
-    margin-right: 0px;   /*------------------------COME BACK HERE WHEN YOU NEED TO-----*/
+    margin-right: 10px;
     margin-left: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
     padding-left: 0px;
     line-height: 19px;
     text-align: center;
+  }
+  .bio-section {
+    margin-bottom: 0px;
   }
   .bio-with-picture-included {
     margin-top: 0px;
