--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -175,7 +175,7 @@ img {
   -ms-flex-pack: center;
   justify-content: center;
   opacity: 1;
-  font-family: 'Bebasneue book', sans-serif;
+  font-family: 'Myriad pro semiextended','Open Sans', sans-serif;
   color: #000;
 }
 
