--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   color: #333;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 22px;
 }
 
 a {
@@ -262,7 +262,7 @@ img {
   text-align: center;
 }
 
-.overall-footer-div {
+/*.overall-footer-div {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -278,7 +278,7 @@ img {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-}
+}*/
 
 .footer-section {
   background-color: #ca94bf;
