--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -223,7 +223,10 @@ img {
   font-weight: 200;
   text-decoration: none;
 }
-
+.styling-prices {
+  line-height: 25px;
+  padding-bottom: 40px;
+}
 .styling-and-bridal-prices {
   display: block;
   padding: 10px;
@@ -240,8 +243,7 @@ img {
   font-size: 20px;
   font-weight: 200;
   text-align: center;
-  line-height: 25px;
-  padding-bottom: 25px;
+  /*padding-bottom: 25px;*/
 }
 
 .main-footer {
