--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -245,7 +245,8 @@ img {
   font-size: 20px;
   font-weight: 200;
   text-align: center;
-  padding-bottom: 25px;
+  line-height: 25px;
+  padding-bottom: 40px;
 }
 
 .main-footer {
