--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -1,11 +1,10 @@
 body {
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   color: #333;
-  font-size: 14px;
 }
 
 a {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 img {
@@ -211,7 +210,7 @@ img {
   justify-content: center;
   font-family: 'Myriad pro semiextended','Open Sans', sans-serif;
   color: #000;
-  font-size: 37px;
+  font-size: 40px;
   font-weight: 200;
   text-align: center;
 }
