--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -129,7 +129,8 @@ img {
   padding-bottom: 0px;
   background-color: #e9e9e9;
 }
-.website-picture {
+
+/*.website-picture {
   position: relative;
   top: -14px;
   right: -33px;
@@ -140,7 +141,7 @@ img {
   clear: none;
   border-radius: 20px;
   text-align: left;
-}
+}*/
 
 .bio-paragraph {
   position: relative;
