--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -148,7 +148,7 @@ img {
   top: 0px;
   right: 0px;
   bottom: 0px;
-  display: flex;
+  display: block;
   margin: 0px;
   padding: 0px 0px 0px 60px;
   float: none;
