--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -439,18 +439,21 @@ img {
     box-shadow: 0 0 3px 0 #b9a7d3;
   }
   .heading-for-company {
+    font-size: 28px;
     margin-top: 25px;
     margin-bottom: 10px;
   }
   .main-content {
     margin-top: 1px;
   }
-  .website-picture {
+    
+  /*.website-picture {
     position: static;
     margin-top: 10px;
     margin-bottom: 10px;
     float: none;
-  }
+  }*/
+    
   .bio-with-picture-included {
     margin-bottom: -4px;
     margin: 10px;
@@ -462,14 +465,16 @@ img {
     padding-bottom: 17px;
     padding-left: 0px;
     text-align: center;
+    font-size: 20px;
   }
   .cuts-and-styling-heading {
-    margin-top: 30px;
+    margin-top: 1px;
     margin-bottom: 30px;
     color: #000;
+    font-size: 28px;
   }
   .styling-and-bridal-prices {
-    display: block;
+    display: inline-block;
     margin-right: auto;
     margin-left: auto;
     padding-right: 18px;
@@ -479,23 +484,26 @@ img {
     -ms-flex: 1;
     flex: 1;
     color: #000;
-    line-height: 23px;
+    line-height: 19px;
     text-align: center;
+    font-size: 14px;
   }
-  .hair-services-prices {
+  .hair-services {
     color: #000;
+    font-size: 23px;
   }
   .main-footer {
     min-height: 0vh;
     margin-top: 0px;
     margin-bottom: 0px;
-    padding-top: 1px;
+    padding-top: 0px;
     padding-bottom: 0px;
     background-color: #ca94bf;
     box-shadow: 0 0 50px 18px #ca94bf;
     color: #000;
   }
-  .footer-div {
+  .footer-div { 
+    display: block;
     margin-bottom: 0px;
     background-color: #b9a7d3;
     box-shadow: 0 -4px 29px 11px #b9a7d3;
@@ -504,7 +512,7 @@ img {
   .hours-and-location-section {
     position: static;
     margin-right: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 25px;
     margin-left: 0px;
     padding: 0px;
     text-align: center;
