--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -358,7 +358,7 @@ img {
 }
 /*-----------------------------Media queries for phones (landscape)-----------------------*/
 
-@media (min-width: 375px) and (max-width: 812px) and (orientation: landscape){
+@media (min-width: 320px) and (max-width: 812px) and (orientation: landscape){
   .nav-bar {
     margin-bottom: 36px;
   }
@@ -420,7 +420,7 @@ img {
   
 }
 /*-------------------------Media queries for phones (portrait)----------------------------------*/
-@media (min-width: 375px) and (max-width: 812px) and (orientation: portrait){
+@media (min-width: 320px) and (max-height: 812px) and (orientation: portrait){
   
   .ansley-and-james-logo-1 {
     margin-top: 0px;
