--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -7,11 +7,6 @@ a {
   text-decoration: none;
 }
 
-img {
-  display: inline-block;
-  max-width: 100%;
-}
-
 .aj-header {
   display: block;
   height: 100px;
@@ -177,7 +172,7 @@ img {
 }
 
 .hours-and-location {
-  display: block;
+  display: inline-block;
   margin-right: 47px;
   margin-bottom: 0px;
   margin-left: 47px;
@@ -276,7 +271,7 @@ img {
   background-color: #b9a7d3;
   box-shadow: 0 -4px 29px 11px #b9a7d3;
   opacity: 1;
-}  
+}
 
 .footer-1-aandj {
   display: block;
@@ -312,37 +307,48 @@ img {
     margin-top: -14px;
   }
   .ansley-and-james-body {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-  }
+  display: block;
+  max-height: 0vh;
+  min-height: 0vh;
+  margin: -15px auto 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #e9e9e9;
   
-  .dev-info {
-    display: flex;
-    margin-top: 0px;
-    padding-top: 0px;
-  }
-  .website-picture {
+  /*.website-picture {
     top: 15px;
     right: 5px;
     bottom: 0px;
     float: left;
-  }
+  }*/
+    
   .bio-paragraph {
-    position: relative;
-    display: flex;
-    padding-top: 0px;
-    padding-left: 25px;
-    float: none;
-    justify-content: center;
-    line-height: 23px;
-  }
-  .nav-bar {
-    margin-top: 0px;
-    margin-bottom: 36px;
-    color: #000;
-  }
-
+  position: relative;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  display: block;
+  margin: 0px;
+  padding: 0px 0px 0px 60px;
+  float: none;
+  clear: none;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  background-color: transparent;
+  font-family: 'Myriad pro semiextended', sans-serif;
+  color: #000;
+  font-size: 19px;
+  font-weight: 200;
+  text-align: center;
+}
   .bio-section {
     margin-bottom: 0px;
   }
@@ -355,28 +361,26 @@ img {
     flex: 0 auto;
     text-align: center;
   }
+    .dev-info {
+    display: flex;
+    margin-top: 0px;
+    padding-top: 0px;
+  }
 }
-/*-----------------------------Media queries for phones (landscape)-----------------------*/
+/*-----------------------------Media queries for phones landscape-----------------------*/
 
-@media (min-width: 320px) and (max-width: 812px) and (orientation: landscape){
+@media (min-width: 375px) and (max-width: 667px){
   .nav-bar {
     margin-bottom: 36px;
   }
-  .dev-info {
-    position: relative;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    background-color: #b9a7d3;
-    text-align: left;
-  }
-  .website-picture {
+    
+  /*.website-picture {
     top: 15px;
     right: 5px;
     bottom: 0px;
     float: left;
-  }
+  }*/
+    
   .bio-paragraph {
     margin-right: 0px;
     margin-left: 0px;
@@ -396,7 +400,7 @@ img {
   .cuts-and-styling-heading {
     margin-top: 74px;
   }
-  .styling-and-bridal-prices {
+  .styling-and-bridal {
     position: static;
     line-height: 19px;
     text-align: center;
@@ -417,10 +421,19 @@ img {
   .hours-and-location-section {
     padding-top: 0px;
   }
+  .dev-info {
+    position: relative;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    background-color: #b9a7d3;
+    text-align: left;
+  }
   
 }
-/*-------------------------Media queries for phones (portrait)----------------------------------*/
-@media (min-width: 320px) and (max-height: 812px) and (orientation: portrait){
+/*-------------------------Media queries for phones----------------------------------*/
+@media (min-width: 300px) and (max-width: 1134px){
   
   .ansley-and-james-logo-1 {
     margin-top: 0px;
@@ -474,7 +487,7 @@ img {
     font-size: 28px;
   }
   .styling-and-bridal-prices {
-    display: inline-block;
+    display: block;
     margin-right: auto;
     margin-left: auto;
     padding-right: 18px;
