--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -56,6 +56,7 @@ a {
   opacity: 1;
   font-family: 'Myriad pro semiextended','Open Sans', sans-serif;
   color: #000;
+  font-weight: 200;
 }
 
 .nav-bar-container {
