--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -1,7 +1,7 @@
 body {
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Myriad pro semiextended','Open Sans', 'Arial', 'Helvetica Neue', 'Helvetica, sans-serif;
   color: #333;
-  font-weight: 200;
+  
 }
 
 a {
@@ -101,19 +101,19 @@ a {
 }
 
 .home-nav-link.w--current {
-  font-family: 'Myriad pro semiextended','Open Sans', sans-serif;
+  font-family: 'Myriad pro semiextended','Open Sans', 'sans-serif';
   color: #000;
   text-align: left;
   text-decoration: underline;
 }
 
 .contact-nav-link {
-  font-family: 'Myriad pro semiextended','Open Sans', sans-serif;
+  font-family: 'Myriad pro semiextended','Open Sans', 'sans-serif';
   color: #000;
 }
 
 .contact-nav-link.w--current {
-  font-family: 'Myriad pro semiextended','Open Sans', sans-serif;
+  font-family: 'Myriad pro semiextended','Open Sans', 'sans-serif';
   color: #000;
 }
 
@@ -161,7 +161,7 @@ a {
   -ms-flex-align: stretch;
   align-items: stretch;
   background-color: transparent;
-  font-family: 'Myriad pro semiextended', sans-serif;
+  font-family: 'Myriad pro semiextended', 'sans-serif';
   color: #000;
   font-size: 19px;
   font-weight: 200;
@@ -183,7 +183,7 @@ a {
   padding-left: 29px;
   float: none;
   background-color: #b9a7d3;
-  font-family: 'Myriad pro semiextended', sans-serif;
+  font-family: 'Myriad pro semiextended', 'sans-serif';
   font-size: 17px;
   text-align: center;
   font-weight: 200;
@@ -194,7 +194,7 @@ a {
   margin-left: 0px;
   padding-top: 0px;
   padding-left: 0px;
-  font-family: 'Myriad pro semiextended','Bebasneue book', sans-serif;
+  font-family: 'Myriad pro semiextended','Bebasneue book', 'sans-serif';
   font-size: 23px;
   font-weight: 200;
 }
@@ -206,7 +206,7 @@ a {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  font-family: 'Myriad pro semiextended','Open Sans', sans-serif;
+  font-family: 'Myriad pro semiextended','Open Sans', 'sans-serif';
   color: #000;
   font-size: 40px;
   font-weight: 200;
@@ -215,7 +215,7 @@ a {
 }
 
 .hair-services {
-  font-family: 'Myriad pro semiextended', sans-serif;
+  font-family: 'Myriad pro semiextended', 'sans-serif';
   font-size: 30px;
   font-weight: 200;
   text-decoration: none;
@@ -237,7 +237,7 @@ a {
   -webkit-flex: 0 auto;
   -ms-flex: 0 auto;
   flex: 0 auto;
-  font-family: 'Myriad pro semiextended', sans-serif;
+  font-family: 'Myriad pro semiextended', 'sans-serif';
   color: #000;
   font-size: 20px;
   font-weight: 200;
@@ -295,7 +295,7 @@ a {
   padding-top: 0px;
   background-color: #b9a7d3;
   direction: ltr;
-  font-family: 'Myriad pro', sans-serif;
+  font-family: 'Myriad pro', 'sans-serif';
   color: #000;
   font-size: 10px;
   text-align: left;
@@ -345,7 +345,7 @@ a {
   -ms-flex-align: stretch;
   align-items: stretch;
   background-color: transparent;
-  font-family: 'Myriad pro semiextended', sans-serif;
+  font-family: 'Myriad pro semiextended', 'sans-serif';
   color: #000;
   font-size: 19px;
   font-weight: 200;
