--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Myriad pro semiextended','Open Sans', 'Arial', 'Helvetica Neue', 'Helvetica, sans-serif;
+  font-family: 'Myriad pro semiextended','Open Sans', 'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
   color: #333;
   
 }
