--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Myriad pro semiextended', 'Arial', 'Helvetica', 'sans-serif';
   color: #333;
 }
 
