--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -303,7 +303,9 @@ a {
 
 /*-------------------------------------Media Queries for tablets-------------------------------------------*/
 
-@media (min-width: 768px) and (max-width: 1024px) {
+@media and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1){
   .aj-header {
     margin-top: -14px;
   }
@@ -315,14 +317,7 @@ a {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #e9e9e9;
-  
-  /*.website-picture {
-    top: 15px;
-    right: 5px;
-    bottom: 0px;
-    float: left;
-  }*/
-    
+  }
   .bio-paragraph {
   position: relative;
   top: 0px;
