--- a/assets/style.css
+++ b/assets/style.css
@@ -65,23 +65,23 @@ a {
     height: 50%;
     width: 100%;
     margin: auto;
-    opacity: 0.3;
+    backdrop-filter
     position: relative;
-    z-index: 1;
+    z-index: -1;
+    text-align: center;
 }
 
 .logo {
-    position: absolute;
-    z-index: 2;
-    width: auto;
-    margin-left: 500px;
-    margin-top: -250px;
+    position: relative;
+    display: inline-block;
+    z-index: 1;
+    padding-top: 80px;
 }
 
 #services-section {
     background-color: lightblue;
     padding-top: 75px;
-    padding-bottom: 75px;
+    padding-bottom: 25px;
     text-align: center;
 }
 
@@ -125,12 +125,11 @@ a {
 }
 
 .hours {
-    
     color: darkslategray;
     display: block;
     font-size: 25px;
     font-weight: 100;
-    line-height: 35px;
+    line-height: 9px;
 }
 
 .location {
@@ -145,7 +144,7 @@ a {
 footer {
     background-color: lightblue;
     text-align: left;
-    padding-top: 0px;
+    padding-top: 50px;
     display: inline-block;
     width: 100%;
 }
@@ -154,5 +153,9 @@ footer a:hover {
     color: white;
     text-decoration: underline;
 }
+
+
+
+
 
 
