Updated again to take out spare code
Updated again to take out spare code that was not needed.

--- a/assets/style.css
+++ b/assets/style.css
@@ -173,406 +173,6 @@ footer a:hover {
 }
 
 
-
-
-
-
-
-
-
-/*-------------------------------------Media Queries for iPad Pro landscape-------------------------------------------*/
-
-@media (min-width: 1366px) and (max-width: 1024px) and (orientation: landscape) {
-    
-.logo {
-    position: relative;
-    display: inline-block;
-    z-index: 1;
-    padding-top: 90px;
-    width: 56%;
-    height: 73%;
- }
-    
-#services-section {
-    background-color: lightblue;
-    padding-top: 15px;
-    padding-bottom: 5px;
-    text-align: center;
- }
-    
-#services h2 {
-    color: darkslategray;
-    font-size: 80px;
-    font-weight: 100;
-    text-decoration: underline;
-    text-transform: uppercase;
- }
-
-#services h4 {
-    color: darkslategray;
-    font-size: 55px;
-    font-weight: 100;
-    text-transform: uppercase;
-    text-align: center;
- }
-    
-#services p {
-    color: darkslategray;
-    display: block;
-    font-size: 40px;
-    font-weight: 100;
-    line-height: 65px;
-    width: 100%;
- }
-
-#contact h3 {
-    color: darkslategray;
-    font-size: 63px;
-    font-weight: 100;
-    text-decoration: underline;
- }
-
-.hours {
-    color: darkslategray;
-    display: block;
-    font-size: 40px;
-    font-weight: 100;
-    line-height: 15px;
- }
-    
-.location {
-    color: darkslategray;
-    display: block;
-    font-size: 40px;
-    font-weight: 100;
-    line-height: 55px;
- }
-    
-footer {
-    background-color: lightblue;
-    font-size: 20px;
-    text-align: left;
-    padding-top: 10px;
-    display: inline-block;
-    width: 100%;
- }   
-}
-
-/*-------------------------------------Media Queries for iPad Pro portrait-------------------------------------------*/
-
-@media (min-width: 1024px) and (max-width: 1366px) and (orientation: portrait) {
-    
-.logo {
-    position: relative;
-    display: inline-block;
-    z-index: 1;
-    padding-top: 50px;
-    width: 66%;
-    height: 82%;
- }
-    
-#services-section {
-    background-color: lightblue;
-    padding-top: 15px;
-    padding-bottom: 5px;
-    text-align: center;
- }
-    
-#services h2 {
-    color: darkslategray;
-    font-size: 80px;
-    font-weight: 100;
-    text-decoration: underline;
-    text-transform: uppercase;
- }
-
-#services h4 {
-    color: darkslategray;
-    font-size: 55px;
-    font-weight: 100;
-    text-transform: uppercase;
-    text-align: center;
- }
-    
-#services p {
-    color: darkslategray;
-    display: block;
-    font-size: 37px;
-    font-weight: 100;
-    line-height: 65px;
-    width: 100%;
-}
-
-#contact h3 {
-    color: darkslategray;
-    font-size: 60px;
-    font-weight: 100;
-    text-decoration: underline;
- }
-
-.hours {
-    color: darkslategray;
-    display: block;
-    font-size: 34px;
-    font-weight: 100;
-    line-height: 15px;
- }
-    
-.location {
-    color: darkslategray;
-    display: block;
-    font-size: 34px;
-    font-weight: 100;
-    line-height: 35px;
- }
-    
-footer {
-    background-color: lightblue;
-    font-size: 15px;
-    text-align: left;
-    padding-top: 10px;
-    display: inline-block;
-    width: 100%;
- }   
-}
-
-
-/*-------------------------------------Media Queries for iPad portrait-------------------------------------------*/
-
-@media (min-width: 768px) and (max-width: 1024px) and screen and (orientation: portrait) {
-    
-.logo {
-    position: relative;
-    display: inline-block;
-    z-index: 1;
-    padding-top: 50px;
-    width: 66%;
-    height: 82%;
- }
-    
-#services-section {
-    background-color: lightblue;
-    padding-top: 15px;
-    padding-bottom: 5px;
-    text-align: center;
- }
-    
-#services h2 {
-    color: darkslategray;
-    font-size: 80px;
-    font-weight: 100;
-    text-decoration: underline;
-    text-transform: uppercase;
- }
-
-#services h4 {
-    color: darkslategray;
-    font-size: 55px;
-    font-weight: 100;
-    text-transform: uppercase;
-    text-align: center;
- }
-    
-#services p {
-    color: darkslategray;
-    display: block;
-    font-size: 37px;
-    font-weight: 100;
-    line-height: 65px;
-    width: 100%;
-}
-
-#contact h3 {
-    color: darkslategray;
-    font-size: 60px;
-    font-weight: 100;
-    text-decoration: underline;
- }
-
-.hours {
-    color: darkslategray;
-    display: block;
-    font-size: 34px;
-    font-weight: 100;
-    line-height: 15px;
- }
-    
-.location {
-    color: darkslategray;
-    display: block;
-    font-size: 34px;
-    font-weight: 100;
-    line-height: 35px;
- }
-    
-footer {
-    background-color: lightblue;
-    font-size: 15px;
-    text-align: left;
-    padding-top: 10px;
-    display: inline-block;
-    width: 100%;
- }     
-    
-}
-
-/*-----------------------------Media queries for phones, iPhone X landscape-----------------------*/
-
-@media (min-width: 812px) and (max-width: 375px) and screen and (orientation: landscape) {
-.logo {
-    position: relative;
-    display: inline-block;
-    z-index: 1;
-    padding-top: 15px;
-}
-    
-#services-section {
-    background-color: lightblue;
-    padding-top: 15px;
-    padding-bottom: 5px;
-    text-align: center;
- }
-    
-#services h2 {
-    color: darkslategray;
-    font-size: 40px;
-    font-weight: 100;
-    text-decoration: underline;
-    text-transform: uppercase;
- }
-
-#services h4 {
-    color: darkslategray;
-    font-size: 30px;
-    font-weight: 100;
-    text-transform: uppercase;
-    text-align: center;
- }
-    
-#services p {
-    color: darkslategray;
-    display: block;
-    font-size: 20px;
-    font-weight: 100;
-    line-height: 25px;
-    width: 100%;
- }
-
-#contact h3 {
-    color: darkslategray;
-    font-size: 20px;
-    font-weight: 100;
-    text-decoration: underline;
- }
-
-.hours {
-    color: darkslategray;
-    display: block;
-    font-size: 15px;
-    font-weight: 100;
-    line-height: 15px;
- }
-    
-.location {
-    color: darkslategray;
-    display: block;
-    font-size: 15px;
-    font-weight: 100;
-    line-height: 35px;
- }
-    
-footer {
-    background-color: lightblue;
-    font-size: 10px;
-    text-align: left;
-    padding-top: 10px;
-    display: inline-block;
-    width: 100%;
- }   
-}
-
-/*-------------------------Media queries for phones, iPhone X portrait----------------------------------*/
-@media (min-width: 375px) and (max-width: 812px) and screen and (orientation: portrait) {
-    
-.logo {
-    position: relative;
-    display: inline-block;
-    z-index: 1;
-    padding-top: 120px;
-}
-    
-#services-section {
-    background-color: lightblue;
-    padding-top: 15px;
-    padding-bottom: 5px;
-    text-align: center;
- }
-    
-#services h2 {
-    color: darkslategray;
-    font-size: 40px;
-    font-weight: 100;
-    text-decoration: underline;
-    text-transform: uppercase;
- }
-
-#services h4 {
-    color: darkslategray;
-    font-size: 30px;
-    font-weight: 100;
-    text-transform: uppercase;
-    text-align: center;
- }
-    
-#services p {
-    color: darkslategray;
-    display: block;
-    font-size: 20px;
-    font-weight: 100;
-    line-height: 25px;
-    width: 100%;
- }
-
-#contact h3 {
-    color: darkslategray;
-    font-size: 20px;
-    font-weight: 100;
-    text-decoration: underline;
- }
-
-.hours {
-    color: darkslategray;
-    display: block;
-    font-size: 15px;
-    font-weight: 100;
-    line-height: 15px;
- }
-    
-.location {
-    color: darkslategray;
-    display: block;
-    font-size: 15px;
-    font-weight: 100;
-    line-height: 35px;
- }
-    
-footer {
-    background-color: lightblue;
-    font-size: .1em;
-    text-align: left;
-    display: inline-block;
-    width: 100%;
- }
-}
-
-
-
-
-
-
-
-
-
 /*Media Queries for Galaxy phones landscape*/
     
 @media only screen and (min-device-width: 360px) and (max-device-width: 640px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
@@ -759,6 +359,7 @@ footer {
      font-size: .7em;
  }
 }
+/*iPhone 5 Portrait*/
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
 .nav {
